test/Fail/RewriteExt-confluence.err
RewriteExt-confluence.agda:32.17-21: error: [RewriteAmbiguousRules]
Global confluence check failed: id unit x (f x) can be rewritten to
either g x or f x.
Possible fix: add a rewrite rule with left-hand side
id unit x (f x) to resolve the ambiguity.
when checking confluence of the rewrite rule f≡g′ with
RewriteExt-confluence.id-clause1
